--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
-    "@airbnb/common": "1.0.0"
+    "@airbnb/common": "1.0.0",
+    "@airbnb/controller": "1.0.0"
+
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -30,6 +32,6 @@
     "@types/react-dom": "^16.0.11",
     "@types/react-router-dom": "^4.3.1",
     "@types/yup": "^0.26.4",
-    "typescript": "^3.2.2"
+    "typescript": "^2.9.1"
   }
 }
