--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -29,21 +29,23 @@
     "typescript": "^2.9.1"
   },
   "dependencies": {
+    "@airbnb/common": "1.0.0",
     "@gql2ts/from-schema": "^1.8.0",
     "@types/express": "^4.11.1",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "connect-redis": "^3.3.3",
     "dotenv": "^5.0.1",
+    "dotenv-safe": "^6.1.0",
     "express": "^4.16.3",
     "express-rate-limit": "^2.11.0",
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
     "glob": "^7.1.2",
-    "graphql": "^0.13.2",
-    "graphql-import": "^0.5.0",
-    "graphql-tools": "^3.0.0",
-    "graphql-yoga": "^1.9.2",
+    "graphql": "^14.1.1",
+    "graphql-import": "^0.7.1",
+    "graphql-tools": "^4.0.4",
+    "graphql-yoga": "^1.17.4",
     "ioredis": "^3.2.2",
     "merge-graphql-schemas": "^1.5.1",
     "node-fetch": "^2.1.2",
@@ -54,8 +56,7 @@
     "sparkpost": "^2.1.2",
     "typeorm": "0.2.0",
     "uuid": "^3.2.1",
-    "yup": "^0.24.1",
-    "@airbnb/common": "1.0.0"
+    "yup": "^0.24.1"
   },
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
