--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
   "private": true,
-  "workspaces": ["packages/*"]
+  "workspaces": [
+    "packages/*"
+  ],
+  "dependencies": {
+    "graphql-code-generator": "^0.16.1"
+  }
 }
