--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -12,12 +12,16 @@
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "apollo-codegen": "^0.20.2",
     "rimraf": "^2.6.3",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.17.0",
     "typescript": "^2.9.1"
   },
   "scripts": {
-    "build": "rimraf dist && tsc"
+    "build": "rimraf dist && tsc",
+    "introspect": "apollo-codegen introspect-schema http://localhost:4000 --output schema.json",
+    "generate": "apollo-codegen generate src/**/*.tsx --schema schema.json --target typescript --output src/operation-result-types.ts",
+    "gen-types": "npm run introspect && npm run generate"
   }
 }
