--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -64,11 +64,12 @@
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
     "test": "NODE_ENV=test jest --watch",
-    "build": "rimraf dist && tsc && copyfiles src/**/*.graphql dist",
+    "build": "rimraf dist && tsc && copyfiles -u 1 src/**/*.graphql dist",
     "gen-schema-types": "ts-node src/scripts/createTypes.ts"
   },
   "jest": {
     "verbose": true,
+    "testEnvironment": "node",
     "testURL": "http://localhost/",
     "globalSetup": "./src/testUtils/callSetup.js",
     "transform": {
