--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,11 +1,30 @@
 [
   {
+    "name": "production",
+    "type": "postgres",
+    "host": "localhost",
+    "port": 5432,
+    "username": "postgres",
+    "password": "secret",
+    "database": "graphql-ts-server-boilerplate",
+    "synchronize": true,
+    "logging": true,
+    "entities": ["src/entity/**/*.js"],
+    "migrations": ["src/migration/**/*.js"],
+    "subscribers": ["src/subscriber/**/*.js"],
+    "cli": {
+      "entitiesDir": "src/entity",
+      "migrationsDir": "src/migration",
+      "subscribersDir": "src/subscriber"
+    }
+  },
+  {
     "name": "development",
     "type": "postgres",
     "host": "localhost",
     "port": 5432,
-    "username": "matias",
-    "password": "",
+    "username": "postgres",
+    "password": "secret",
     "database": "graphql-ts-server-boilerplate",
     "synchronize": true,
     "logging": true,
@@ -23,8 +42,8 @@
     "type": "postgres",
     "host": "localhost",
     "port": 5432,
-    "username": "matiaskochman",
-    "password": "",
+    "username": "postgres",
+    "password": "secret",
     "database": "graphql-ts-server-boilerplate-test",
     "synchronize": true,
     "logging": false,
