--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": {
+    "packages": ["packages/*"],
+    "nohoist": [
+      "**/rimraf", 
+      "**/rimraf/**"
+    ]
+  },
   "dependencies": {
     "graphql-code-generator": "^0.16.1"
   }
