--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -64,6 +64,7 @@
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
     "test": "NODE_ENV=test jest --watch",
+    "test:debug": "node --inspect node_modules/.bin/jest --runInBand /src/modules/user/register/createConfirmEmailLink.test.ts",
     "build": "rimraf dist && tsc && copyfiles -u 1 src/**/*.graphql dist",
     "gen-schema-types": "ts-node src/scripts/createTypes.ts"
   },
